[build-system]
requires = ["flit_core >=3.9,<4"]  # 明确使用支持 Python 3.12 的版本，的flit_core版本
build-backend = "flit_core.buildapi"  # 使用支持 flit_core构建项目

[project]
name = "share-docs"  # 项目名称
authors = [{name = "ShareMk", email = "ShareMk@share-docs"}]  # 明确使用支持 Python 3.12 的版本

#dynamic = ["version", "description"]

version = "0.1.0"  # 明确指定版本
description = "Documentation project to record learning and problem solving."  # 明确指定描述
